type AnnouncementDto = {
	id: number
	buildingId: number
	title: string
	meta: string
	body: string
}

export default AnnouncementDto
