type BuildingDto = {
	id: number
	name: string
	description: string
}

export default BuildingDto
