type EventTypeDto = {
	id: number
	name: string
}

export default EventTypeDto
