type SectionDto = {
	id: number
	buildingId: number
	name: string
	description: string | null
}

export default SectionDto
