export type UserRoleDto = {
	id: number
	name: string
}
